# silly-mafia-style-game

./: Cargo.toml
src/: game.rs  main.rs
templates/: base.html  game_content.html  game_in_progress.html  game_page.html  hello.html  home.html
