[package]
name = "mafia-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.3"
axum = "0.6"
serde = { version = "1.0.192", features = ["derive", "std"] }
tokio = { version = "1", features = ["full"] }
